--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <!-- <header></header>
-        <nav></nav>
-        <main></main>
-        <section></section>
-        <footer></footer>
-        
-        <article>статья</article>
-        <aside>неосновное (боковое) содержимое</aside>
-        <address></address>
-        <time></time>
-        <figure><figcaption></figcaption></figure>
-        <mark></mark> -->
+        <div class="out-container">
+            <div id="container" class="container">
+                <!-- <div class="str">
+                    <div class="col"></div>
+                </div>-->
+            </div> 
+        </div>
         <script src="/js/script.js"></script>
     </body>
 </html>
