--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <body>
         <div class="out-container">
             <div id="container" class="container">
-                <!-- <div class="str">
-                    <div class="col"></div>
-                </div>-->
+                <div id="expression" class="expression">
+
+                </div>
+
             </div> 
         </div>
         <script src="/js/script.js"></script>
