--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     </head>
     <body>
         <div class="out-container">
-            <div id="container" class="container">
-                <div id="expression" class="expression">
-
-                </div>
-
-            </div> 
+            <div id="expression">
+                <input type="text">
+            </div>
+            <div id="container"></div> 
         </div>
         <script src="/js/script.js"></script>
     </body>
