--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div class="out-container">
+            <span><i>Полечка! Это сделано специально для тебя. Выучи, пожалуйста, таблицу умножения</i></span>
             <div id="expression">
                 <input type="text">
             </div>
