--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <div class="out-container">
             <span><i>Полечка! Это сделано специально для тебя. Выучи, пожалуйста, таблицу умножения</i></span>
             <div id="expression">
-                <input type="text">
+                <input id="input" type="text">
             </div>
+            <div id="result">Результат</div>
             <div id="container"></div> 
         </div>
         <script src="/js/script.js"></script>
