--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="expression">
                 <input id="input" type="text">
             </div>
-            <div id="result">Результат</div>
+            <div id="result"></div>
             <div id="container"></div> 
         </div>
         <script src="/js/script.js"></script>
