--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
     </head>
     <body>
         <div class="out-container">
-            <span><i>Полечка! Это сделано специально для тебя. Выучи, пожалуйста, таблицу умножения</i></span>
+            <span
+                ><i
+                    >Полечка! Это сделано специально для тебя. Выучи,
+                    пожалуйста, таблицу умножения</i
+                ></span
+            >
             <div id="expression">
-                <input id="input" type="number">
+                <input id="input" type="number" />
             </div>
             <div id="result"></div>
-            <div id="container"></div> 
+            <div id="container"></div>
         </div>
+
         <script src="/js/script.js"></script>
+        
     </body>
 </html>
